<resources>
    <string name="app_name">Moviepoint</string>
    <string name="app_icon">Moviepoint Icon</string>
    <string name="app_logo">Moviepoint Logo</string>

    <string name="nav_bottom_1">In Theaters</string>
    <string name="nav_bottom_2">Watchlist</string>
    <string name="nav_bottom_3">History</string>
    <string name="nav_action_1">Search</string>
    <string name="nav_action_2">Settings</string>

    <string name="movie_poster">Movie Poster</string>
    <string name="movie_title">Title</string>
    <string name="movie_release">Date</string>
    <string name="movie_release_tba">Release Date TBA</string>
    <string name="movie_runtime">… Minutes</string>
    <string name="movie_status">…</string>
    <string name="movie_tagline">Tagline</string>
    <string name="movie_plot">Plot</string>
    <string name="movie_genre">Genre</string>
    <string name="movie_cast">Cast</string>
    <string name="movie_cast_photo">Cast Photo</string>

    <string name="search">Search</string>

    <string name="about_rights">All Rights Reserved.</string>
    <string name="about_computing">A Computing Mobile Development Project.</string>
    <string name="about_lucas">Lucas Tan</string>
    <string name="about_sean">Sean Joyce</string>
    <string name="about_team">Team</string>

    <string name="notifications">notifications</string>
    <string name="region">saved_region</string>
    <string name="region_default">US</string>
</resources>
